@@ -1,28 +1,24 @@
 package TestCase::Simple {
   use TestCase::Minimal;
   
-  has x : int;
-  has y : int;
+  has x : rw public int;
+  has y : rw public int;
   
-  has byte_value : byte;
-  has short_value : short;
-  has int_value : int;
-  has long_value : long;
-  has float_value : float;
-  has double_value : double;
-  has object_value : TestCase::Minimal;
+  has byte_value : rw public byte;
+  has short_value : rw public short;
+  has int_value : rw public int;
+  has long_value : rw public long;
+  has float_value : rw public float;
+  has double_value : rw public double;
+  has object_value : rw public TestCase::Minimal;
   
-  our $FOO : public int;
+  our $FOO : public rw int;
   our $VAR_PRIVATE : private int;
 
   sub get_x : int ($self : self) {
     return $self->{x};
   }
 
-  sub set_x : void ($self : self, $x : int) {
-    $self->{x} = $x;
-  }
-  
   sub new : TestCase::Simple () {
     return new TestCase::Simple;
   }
